Fixed Hero section Header padding overflow

--- a/styles.css
+++ b/styles.css
@@ -152,12 +152,12 @@ div.hero-section h1 {
     color: #f3f4f4;
 	font-weight: 400;
 	font-style: normal;
-    font-size: clamp(6.5rem,10vw,10rem);
+    font-size: clamp(5.5rem,10vw,10rem);
 	text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.8);
 	text-transform: uppercase;
     text-align: center;
     min-width: 100%;
-    padding: 0.5rem 2rem;
+
 }
 
 /* ========= Main Body ========= */
